test/org/midica/testfiles/failing/note-in-percussion-channel.midica
INCLUDE inc/instruments.midica

p c /4
